<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CellIDActivity">

        <EditText
            android:id="@+id/etMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/period" 
            android:textColor="@color/white">
        </EditText>

        <TextView
            android:id="@+id/tvTimeBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMin"
            android:layout_centerHorizontal="true"
            android:textSize="7pt"
            android:text="@string/vrijeme" 
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/bShowLocation"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeBet"
            android:layout_marginTop="22dp"
            android:layout_toLeftOf="@+id/tvTimeBet"
            android:text="@string/start" />

        <Button
            android:id="@+id/bStopLocation"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bShowLocation"
            android:layout_alignBottom="@+id/bShowLocation"
            android:layout_toRightOf="@+id/tvTimeBet"
            android:text="@string/stop" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bShowLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textSize="6pt"/>

        <Button
            android:id="@+id/bMail"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/mail" />

</RelativeLayout>